# substrate-pallet-rpc

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/items/: Cargo.toml
pallets/items/rpc/: Cargo.toml
pallets/items/rpc/runtime-api/: Cargo.toml
pallets/items/rpc/runtime-api/src/: lib.rs
pallets/items/rpc/src/: lib.rs
pallets/items/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
